chore: Run foxxo

--- a/foxxo.toml
+++ b/foxxo.toml
@@ -1,4 +1,9 @@
+[project]
 ecosystem = 'unknown'
 form = 'unknown'
 for = 'anyone'
 status = 'earlyaccess'
+
+[discovery]
+categories = []
+tags = []
