--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-#![feature(exit_status_error)]
-
 [package]
 name = "dotmgr"
 description = "Dotfile manager"
@@ -17,4 +15,5 @@ env_logger = "0.10.0"
 glob = "0.3.1"
 log = "0.4.17"
 notify = { version = "5.0.0", features = ["serde"] }
+pista = "0.1.5"
 tui = "0.19.0"
