--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 clap = { version = "4.0.32", features = ["derive"] }
 clap-verbosity-flag = "2.0.0"
 colored = "2.0.0"
+colorize = "0.1.0"
 crossterm = "0.25.0"
 env_logger = "0.10.0"
 glob = "0.3.1"
