--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap-verbosity-flag = "2.0.0"
 colored = "2.0.0"
 colorize = "0.1.0"
 crossterm = "0.25.0"
+dirs = "4.0.0"
 env_logger = "0.10.0"
 glob = "0.3.1"
 log = "0.4.17"
